# aeroroute-mlx-training

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: gemma3-12b-qlora.yaml  gemma3-4b-smoke.yaml  local-smoke-manifest.example.json
docs/: BAKEOFF_2026-07-09.md  COMPATIBILITY_12B_2026-07-09.md  QLORA_DECISION_2026-07-09.md  REVIEW_PROTOCOL.md  bakeoff-mistral-7b-2026-07-09.json  bakeoff-qwen3-8b-2026-07-09.json
samples/: prompt-only-baseline.json
scripts/: model_bakeoff.py
src/aeroroute_mlx_training/: __init__.py  cli.py
src/aeroroute_mlx_training/compatibility/: probe.py
src/aeroroute_mlx_training/dataset_generation/: records.py
src/aeroroute_mlx_training/dataset_validation/: validation.py
src/aeroroute_mlx_training/evaluation/: adapter.py  metrics.py  promotion.py
src/aeroroute_mlx_training/splitting/: grouped.py
src/aeroroute_mlx_training/training/: __init__.py  ranked_data.py  smoke.py  smoke_data.py
tests/property/: test_grouped_split.py
tests/unit/: test_cli.py  test_compatibility.py  test_dataset_records.py  test_evaluation.py  test_package.py  test_training_smoke.py
